Bump the dependencies group with 11 updates (#1)
* Bump the dependencies group with 11 updates

Bumps the dependencies group with 11 updates:

| Package | From | To |
| --- | --- | --- |
| [com.fasterxml.jackson.core:jackson-databind](https://github.com/FasterXML/jackson) | `2.12.7.1` | `2.16.0` |
| com.fasterxml.jackson.datatype:jackson-datatype-jsr310 | `2.14.2` | `2.16.0` |
| com.fasterxml.jackson.datatype:jackson-datatype-jdk8 | `2.12.7` | `2.16.0` |
| [org.immutables:value](https://github.com/immutables/immutables) | `2.9.0` | `2.10.0` |
| [org.immutables:builder](https://github.com/immutables/immutables) | `2.9.0` | `2.10.0` |
| [org.immutables:encode](https://github.com/immutables/immutables) | `2.9.0` | `2.10.0` |
| [org.junit.jupiter:junit-jupiter-engine](https://github.com/junit-team/junit5) | `5.7.1` | `5.10.1` |
| [ch.qos.logback:logback-classic](https://github.com/qos-ch/logback) | `1.2.3` | `1.4.11` |
| com.github.ben-manes.versions | `0.38.0` | `0.50.0` |
| net.researchgate.release | `2.8.1` | `3.0.2` |
| [com.google.code.findbugs:annotations](https://github.com/findbugsproject/findbugs) | `3.0.1` | `3.0.1u2` |


Updates `com.fasterxml.jackson.core:jackson-databind` from 2.12.7.1 to 2.16.0
- [Commits](https://github.com/FasterXML/jackson/commits)

Updates `com.fasterxml.jackson.datatype:jackson-datatype-jsr310` from 2.14.2 to 2.16.0

Updates `com.fasterxml.jackson.datatype:jackson-datatype-jdk8` from 2.12.7 to 2.16.0

Updates `org.immutables:value` from 2.9.0 to 2.10.0
- [Release notes](https://github.com/immutables/immutables/releases)
- [Commits](https://github.com/immutables/immutables/commits/2.10.0)

Updates `org.immutables:builder` from 2.9.0 to 2.10.0
- [Release notes](https://github.com/immutables/immutables/releases)
- [Commits](https://github.com/immutables/immutables/commits/2.10.0)

Updates `org.immutables:encode` from 2.9.0 to 2.10.0
- [Release notes](https://github.com/immutables/immutables/releases)
-